fix page scroll on mobile bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ body {
     width: 100%;
     height: 100vh;
     background-color: var(--my-dark);
-    overflow-y: scroll;
 }
 
 .folder {
@@ -140,6 +139,9 @@ body {
 
 /* For mobiles: */
 @media only screen and (max-width: 768px) {
+    body {
+        overflow-y: auto;
+    }
     .page_title {
         font-size: 1.25rem;
     }
